# LLM_announcement

./: .gitignore  README.md  [1]crawling.py  [2]hwp_to_pdf.py  [3]llm.py  [4]auto_message.au3  [4]auto_message.py  parser.ipynb  pyproject.toml  run_auto_message.ps1  run_auto_message1.ps1  run_hwp_to_pdf.ps1  study.ipynb  study.yaml  study2.yaml  template.json
